Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-31463

Verify stats fails after loading the cluster

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 6.5.0
    • 6.5.0
    • couchbase-bucket
    • None

    Description

      Steps are here:

      1. load data to cluster until you hit 85% resident ratio - basically get the cluster to DGM, cluster has 3 buckets, with replicas
      2. exp_pager_stime to 10 on 3 buckets on all nodes
      3. Validate the stats for active and replica vbuckets

      Validation of active and replica items is failing for stats.

      All warmup tests in regression fails during verification of stats after loading data on a 4 node cluster.

      curr_item_total:

      Expected : 2460000

      Actual: 2457767

      vb_replica_curr_items:

      Expected: 1230000

      Actual : 1227767.

      whereas vb_active_curr_item is 1230000. 

      Attached memchached failure and the test failure logs snippet. All gave links for all the cbcollect logs

      Link to testrunner test command:

      ./testrunner -i b/resources/4-nodes-template.ini -p max-dupe-result-count=10,num-tries=60,attempt-num=60,dgm_run=true,eviction_policy=fullEviction,is_container=True -t warmup.warmuptest.WarmUpTests.warmup_test,stats_monitor=vb_replica_perc_mem_resident;vb_active_perc_mem_resident,items=20000,sasl_buckets=1,standard_buckets=1,active_resident_threshold=90,doc_ops=update,GROUP=P0
      

       

      Attachments

        1. Bucket.png
          Bucket.png
          52 kB
        2. memcached_error_log.png
          memcached_error_log.png
          1.48 MB
        3. Server.png
          Server.png
          136 kB
        4. Test_result.png
          Test_result.png
          1.16 MB

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              jwalker Jim Walker
              anitha.kuberan Anitha Kuberan
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty