MB-31463: Save new replication cursor after dropping

A case exists where we've dropped the cursor, registered
a new one but then missed storing the new cursor into
the active stream, resulting the stream failing to replicate.

Change-Id: I0f7c53ecbc25990f0b0f24a92c25ef024c4502f0
Reviewed-on: http://review.couchbase.org/100692
Reviewed-by: Dave Rigby <daver@couchbase.com>
Reviewed-by: Paolo Cocchi <paolo.cocchi@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>